# box

./: .gitignore  Anchor.toml  README.md  package-lock.json
keys/dev/: holder.json
programs/box_2024/: Cargo.toml
programs/box_2024/src/: constants.rs  error.rs  events.rs  lib.rs  types.rs
programs/box_2024/src/instructions/: add_nft_box.rs  add_nfts.rs  admin_instruction.rs  buy_box.rs  buy_box_sol.rs  buy_box_spl.rs  claim_box.rs  close_box.rs  create_box.rs  init_buyer.rs  initialize.rs  mod.rs  operator_instruction.rs
programs/box_2024/src/state/: authority_role.rs  box_status.rs  box_storage.rs  box_struct.rs  mod.rs  unipet_box.rs  user_claim.rs  user_mint.rs  user_struct.rs
script/: add_nfts.ts  buy_box.ts  buy_box_sol.ts  buy_box_spl.ts  change_currencies.ts  change_rates.ts  change_time.ts  claim.ts  close_box.ts  create_box_normal.ts  create_box_premium.ts  create_box_sol.ts  create_box_usdc.ts  deploy.ts  get_event.ts  get_history.ts  helper.ts  init.ts  set_operator.ts
tests/: box_2024.ats  box_2024.ts  buy_box_sol.ts  buy_box_spl.ts  utils.ts
